--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>
   <h1>Croissant</h1>  
   <p>A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[3] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French: [kʁwasɑ̃] (About this soundlisten)) is a buttery, flaky, viennoiserie pastry of Austrian origin,[1] but mostly associated with France. Croissants are named for their historical crescent shape and, like other viennoiseries, are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.</p>
-
+<footer>
   <a href="index.html">Homepage</a>
   <a href="images/cr.jpg">Photo</a>
   <a href="contact.html">Contact</a>
-
+</footer>
 </body>
 </html>
