--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="A croissant is one of the famuse breads ">
     <link rel="stylesheet" href="style/styles.css">
-    <title>croissant</title>
+    <title>deliciuse croissant</title>
 </head>
 <body>
   <h1>Croissant</h1>  
   <p>A croissant (UK: /ˈkrwʌsɒ̃, ˈkrwæsɒ̃/,[3] US: /krəˈsɒnt, krwɑːˈsɒ̃/, French: [kʁwasɑ̃] (About this soundlisten)) is a buttery, flaky, viennoiserie pastry of Austrian origin,[1] but mostly associated with France. Croissants are named for their historical crescent shape and, like other viennoiseries, are made of a layered yeast-leavened dough. The dough is layered with butter, rolled and folded several times in succession, then rolled into a thin sheet, in a technique called laminating. The process results in a layered, flaky texture, similar to a puff pastry.</p>
 <footer>
   <a href="index.html">Homepage</a>
-  <a href="images/cr.jpg">Photo</a>
+  <a href="image.html">Photo</a>
   <a href="contact.html">Contact</a>
 </footer>
 </body>
